<resources>
    <string name="app_name">RPGAPP</string>
    <string name="nome">Nome</string>
    <string name="classe">Classe</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="as_entradas_foram_apagadas">As entradas foram apagadas!</string>
    <string name="o_campo_nome_esta_vazio">O campo nome está vazio!</string>
    <string name="o_campo_classe_esta_vazio">O campo classe está vazio!</string>
    <string name="nome_valor">"Nome: "</string>
    <string name="classe_valor">"Classe: "</string>
    <string name="jogador">NPC (Personagem que não é jogador)</string>
    <string name="npc">É NPC</string>
    <string name="nao_npc">Não é NPC</string>
    <string name="mau">Mau</string>
    <string name="neutro">Neutro</string>
    <string name="bom">Bom</string>
    <string name="alinhamento">Alinhamento</string>
    <string name="criador_de_personagem">Criador de Personagem</string>
    <string name="selecao">A seleção do alinhamento é obrigatória</string>
    <string name="alinhamento_valor">"Alinhamento: "</string>
    <string name="raca">Raça"</string>
    <string name="humano">Humano</string>
    <string name="anao">Anão</string>
    <string name="elfo">Elfo</string>
    <string name="spinner">O spinner não está populado</string>
    <string name="raca_valor">"Raça: "</string>
    <string name="paladino">Paladino</string>
    <string name="barbaro">Bárbaro</string>
    <string name="mago">Mago</string>
    <string name="feiticeiro">Feiticeiro</string>
    <string name="ladrao">Ladrão</string>
    <string name="monge">Monge</string>
    <string name="lutador">Lutador</string>
    <string name="alquimista">Alquimista</string>
    <string name="personagem_de_nome">Personagem de nome \"</string>
    <string name="foi_clicado">\"\nfoi clicado</string>
    <string name="logo_rpgapp">Logo RPGAPP</string>
    <string name="autor">Autor: Felipe Kauã de Lima</string>
    <string name="curso">Curso: Engenharia de Computação</string>
    <string name="email">Email: fkauadelima@gmail.com</string>
    <string name="descricao">Controle de Enredos para RPG</string>
    <string name="sobre">Sobre</string>
    <string name="listagem_de_personagens">Listagem de Personagens</string>
    <string name="adicionar">Adicionar</string>
    <string name="novo_personagem">Novo Personagem</string>
    <string name="editar">Editar\n</string>
    <string name="excluir">Excluir</string>
    <string name="editar_pessoa">Editar Pessoa</string>
    <string name="sugerir_tipo">Sugerir Tipo</string>
</resources>